Added Linux File Systems Note

--- a/index.html
+++ b/index.html
@@ -37,16 +37,35 @@
       <a href="/contact">Contact</a>
     </nav>
     <h1>Study Notes 📝</h1>
-    <p>Personal notes related to various tutorials made over the years <br>for my own reference.</p>
+    <p>Personal notes related to various tutorials made over the years.</p>
   </header>
   <main>
-    <p class="notice"><strong>Are you using Simple.css?</strong><br/>
-      If you are, it would be great if you considered buying me a coffee to say thanks. Things like this really help open source software thrive. You can <a href="https://ko-fi.com/kevquirk">Buy Me A Coffee</a> or even <a href="https://github.com/sponsors/kevquirk">sponsor me on GitHub</a>. ❤️</p>
+    <!-- <p class="notice"><strong>Linux File System</strong><br/>
+      If you are, it would be great if you considered buying me a coffee to say thanks. Things like this really help open source software thrive. You can <a href="https://ko-fi.com/kevquirk">Buy Me A Coffee</a> or even <a href="https://github.com/sponsors/kevquirk">sponsor me on GitHub</a>. ❤️</p> -->
+
+      <div class="notes-item">
+        <a class="notes-link" href="/simple-css-version-2"><strong>Linux File Systems 🗂</strong></a>
+        <p class="meta"><i>The different folders present on the root folder of Linux and what purpose do each serve.</i></p>
+        <p class="meta">09 Mar 2022</p>
+      </div>
+      <div>
+        <br><br><br><br><br><br><br>
+      </div>
   </main>
   <footer>
-    Created by <a href="https://arghyadeep.in">Arghyadeep</a>.
+    Created by <a href="https://arghyadeep.in">Arghyadeep</a>
     <br>
-    Licensed under the MIT license.
+    <br>
+    <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
+    <div>
+      <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg" /></a>
+      &nbsp;
+      <a href="https://www.javascript.com"><img src="https://img.shields.io/badge/Made%20without-JavaScript-1f425f.svg"></a>
+    </div>
+    <br>
+    <div class="kb-club">
+      <a target="blank" href="https://512kb.club"><span class="kb-club-no-bg">512KB Club</span><span class="kb-club-bg">GREEN TEAM</span></a>
+    </div>
   </footer>
   </body>
 </html>
