--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       If you are, it would be great if you considered buying me a coffee to say thanks. Things like this really help open source software thrive. You can <a href="https://ko-fi.com/kevquirk">Buy Me A Coffee</a> or even <a href="https://github.com/sponsors/kevquirk">sponsor me on GitHub</a>. ❤️</p> -->
 
       <div class="notes-item">
-        <a class="notes-link" href="/simple-css-version-2"><strong>Linux File Systems 🗂</strong></a>
+        <a class="notes-link" href="/notes/linux-file-system">Linux File Systems 🗂</a>
         <p class="meta"><i>The different folders present on the root folder of Linux and what purpose do each serve.</i></p>
         <p class="meta">09 Mar 2022</p>
       </div>
