Added GitHub repo link

--- a/notes/linux-file-system.html
+++ b/notes/linux-file-system.html
@@ -32,7 +32,7 @@
   <body>
     <header>
     <nav>
-      <a href="/" class="current">Home</a>
+      <a href="/">Home</a>
       <a href="/about">About</a>
       <a href="/contact">Contact</a>
     </nav>
@@ -153,10 +153,22 @@
         </div>
     </article>
     </main>
-  <footer>
-    Created by <a href="https://arghyadeep.in">Arghyadeep</a>.
-    <br>
-    Licensed under the MIT license.
-  </footer>
+    <footer>
+      Created by <a href="https://arghyadeep.in">Arghyadeep</a>
+      <br>
+      <br>
+      <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
+      <div>
+        <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+        &nbsp;
+        <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
+        &nbsp;
+        <a href="https://www.javascript.com"><img src="https://img.shields.io/badge/Made%20without-JavaScript-1f425f.svg"></a>
+      </div>
+      <br>
+      <div class="kb-club">
+        <a target="blank" href="https://512kb.club"><span class="kb-club-no-bg">512KB Club</span><span class="kb-club-bg">GREEN TEAM</span></a>
+      </div>
+    </footer>
   </body>
 </html>
