--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,21 @@
       If you are, it would be great if you considered buying me a coffee to say thanks. Things like this really help open source software thrive. You can <a href="https://ko-fi.com/kevquirk">Buy Me A Coffee</a> or even <a href="https://github.com/sponsors/kevquirk">sponsor me on GitHub</a>. ❤️</p>
   </main>
   <footer>
-    Created by <a href="https://arghyadeep.in">Arghyadeep</a>.
+    Created by <a href="https://arghyadeep.in">Arghyadeep</a>
     <br>
-    Licensed under the MIT license.
+    <br>
+    <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
+    <div>
+      <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+      &nbsp;
+      <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
+      &nbsp;
+      <a href="https://www.javascript.com"><img src="https://img.shields.io/badge/Made%20without-JavaScript-1f425f.svg"></a>
+    </div>
+    <br>
+    <div class="kb-club">
+      <a target="blank" href="https://512kb.club"><span class="kb-club-no-bg">512KB Club</span><span class="kb-club-bg">GREEN TEAM</span></a>
+    </div>
   </footer>
   </body>
 </html>
