--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     <br>
     <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
     <div>
-      <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg" /></a>
+      <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+      &nbsp;
+      <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
       &nbsp;
       <a href="https://www.javascript.com"><img src="https://img.shields.io/badge/Made%20without-JavaScript-1f425f.svg"></a>
     </div>
