Updated Twitter & Facebook integration

--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,12 @@
       If you are, it would be great if you considered buying me a coffee to say thanks. Things like this really help open source software thrive. You can <a href="https://ko-fi.com/kevquirk">Buy Me A Coffee</a> or even <a href="https://github.com/sponsors/kevquirk">sponsor me on GitHub</a>. ❤️</p>
   </main>
   <footer>
-    Created by <a href="https://arghyadeep.in">Arghyadeep</a>
+    Created by 
+    <a href="https://arghyadeep.in">Arghyadeep</a>
     <br>
-    <br>
-    <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
+    <br> 
     <div>
-      <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+      <a href="https://github.com/arghyadeep-k/NotesBlog"><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
       &nbsp;
       <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
       &nbsp;
