--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
     <link rel="apple-touch-icon" href="/assets/images/favicon.png">
 
     <!-- Facebook integration -->
-    <meta property="og:title" content="Simple.css - A classless CSS framework"/>
-    <meta property="og:image" content="https://simplecss.org/assets/images/simple-css-feature.webp"/>
-    <meta property="og:url" content="https://simplecss.org/"/>
+    <meta property="og:title" content="Study Notes - Personal tutorial notes on a variety of topics"/>
+    <meta property="og:image" content="https://notes.arghyadeep.in/assets/images/study-notes-logo.webp"/>
+    <meta property="og:url" content="https://notes.arghyadeep.in/"/>
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Simple.css"/>
-    <meta property="og:description" content="A classless CSS framework that makes semantic HTML look good."/>
+    <meta property="og:site_name" content="Study Notes"/>
+    <meta property="og:description" content="Personal notes related to various tutorials collected over the years made available to the public domain for quick referencing by anyone."/>
 
     <!-- Twitter integration -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Simple.css - A classless CSS framework" />
-    <meta name="twitter:image" content="https://simplecss.org/assets/images/simple-css-feature.webp" />
-    <meta name="twitter:url" content="https://simplecss.org/" />
-    <meta name="twitter:description" content="Simple.css is classless CSS template that allows you to create a good looking website very quickly." />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@arghyadeep_k" />
+    <meta name="twitter:title" content="Study Notes - Personal tutorial notes on a variety of topics" />
+    <meta name="twitter:image" content="https://notes.arghyadeep.in/assets/images/study-notes-logo.webp" />
+    <meta name="twitter:url" content="https://notes.arghyadeep.in/" />
+    <meta name="twitter:description" content="Personal notes related to various tutorials collected over the years made available to the public domain for quick referencing by anyone." />
   </head>
 
   <body>
@@ -53,12 +54,12 @@
       </div>
   </main>
   <footer>
-    Created by <a href="https://arghyadeep.in">Arghyadeep</a>
+    Created by 
+    <a href="https://arghyadeep.in">Arghyadeep</a>
     <br>
     <br>
-    <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
     <div>
-      <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+      <a href="https://github.com/arghyadeep-k/NotesBlog"><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
       &nbsp;
       <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
       &nbsp;
