--- a/notes/linux-file-system.html
+++ b/notes/linux-file-system.html
@@ -154,12 +154,12 @@
     </article>
     </main>
     <footer>
-      Created by <a href="https://arghyadeep.in">Arghyadeep</a>
+      Created by 
+      <a href="https://arghyadeep.in">Arghyadeep</a>
       <br>
       <br>
-      <!-- <a href="https://512kb.club"><img src="https://512kb.club/assets/images/green-team.svg" /></a> --> 
       <div>
-        <a href=""><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
+        <a href="https://github.com/arghyadeep-k/NotesBlog"><img src="https://img.shields.io/badge/GitHub-NotesBlog-369cc2.svg"></a>
         &nbsp;
         <a href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-blue.svg"/></a>
         &nbsp;
