--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     
-    <title>Page Title</title>
-    <meta name="description" content="A classless CSS framework that makes semantic HTML look good." />
+    <title>Study Notes</title>
+    <meta name="description" content="Personal tutorial notes on a variety of topics" />
     
     <link rel="icon" href="/assets/images/favicon.png" />
     <link rel="apple-touch-icon" href="/assets/images/favicon.png">
